--- a/index.html
+++ b/index.html
@@ -4,21 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Zoom</title>
 </head>
 <body>
 
     <!--Inizio header-->
-    <header>
+    <header class="flex">
 
+        <!--Inizio contenitore "Speaker View e Arrows"-->
+        <div class="header-content flex">
+
+            <!--Inizio contenitore "Speaker View"-->
+            <div class="speaker flex">
+                <i class="fas fa-th header-txt"></i>
+                <span class="header-txt" id="speaker-view">Speaker View</span>
+            </div>
+            <!--Fine contenitore "Speaker View"-->
+
+            <!--Inizio contenitore Arrows-->
+            <div class="full-screen flex">
+                <i class="fas fa-expand-arrows-alt header-txt" id="arrows"></i>
+            </div>
+            <!--Fine contenitore Arrows-->
+        </div>
+        <!--Fine contenitore "Speaker View e Arrows"-->
     </header>
     <!--Fine header-->
 
     <!--Inizio main-->
     <main>
-
+        
     </main>
     <!--Fine main-->
     
