--- a/index.html
+++ b/index.html
@@ -40,14 +40,290 @@
     <!--Fine header-->
 
     <!--Inizio main-->
-    <main>
+    <main class="flex">
+
+        <div class="participants flex person-container">
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+        </div>
+
         
     </main>
     <!--Fine main-->
     
     <!--Inizio footer-->
-    <footer>
+    <footer class="flex">
 
+        <div class="functions flex">
+
+            <div class="flex audio-video">
+
+                <div class="mic flex-col">
+                    <i class="fas fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+
+                <div class="arrow-up flex-col">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+
+                <div class="video flex-col">
+                    <i class="fas fa-video"></i>
+                    <p>Stop Video</p>
+                </div>
+
+                <div class="arrow-up flex-col">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+
+            </div>
+
+            <div class="flex icons">
+
+            </div>
+        </div>
+
+        <div class="end-meeting flex">
+            <p>End meeting</p>
+        </div>
     </footer>
     <!--Fine footer-->
 </body>
