--- a/index.html
+++ b/index.html
@@ -296,28 +296,74 @@
 
             <div class="flex audio-video">
 
-                <div class="mic flex-col">
-                    <i class="fas fa-microphone"></i>
+                <div class="mic flex-col menu-voice">
+                    <i class="fas fa-microphone icon-big"></i>
                     <p>Mute</p>
                 </div>
 
-                <div class="arrow-up flex-col">
+                <div class="arrow-up flex-col menu-voice">
                     <i class="fas fa-angle-up"></i>
                 </div>
 
-                <div class="video flex-col">
-                    <i class="fas fa-video"></i>
+                <div class="video flex-col menu-voice">
+                    <i class="fas fa-video icon-big"></i>
                     <p>Stop Video</p>
                 </div>
 
-                <div class="arrow-up flex-col">
+                <div class="arrow-up flex-col menu-voice">
                     <i class="fas fa-angle-up"></i>
                 </div>
 
             </div>
 
-            <div class="flex icons">
+            <div class="flex icons-container">
 
+                <div class="flex-col menu-voice" id="invite">
+                    <i class="fas fa-user-plus icon-big"></i>
+                    <p>Invite</p>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-user-friends icon-big"></i>
+                    <p>Manage Psrticipants</p>
+
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-chart-bar icon-big"></i>
+                    <p>Polling</p>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-share-square icon-big" id="green-icon"></i>
+                    <p>Share Screen</p>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-comment icon-big"></i>
+                    <p>Chat</p>
+                </div>
+                
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-record-vinyl icon-big"></i>
+                    <p>Record</p>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-th-large icon-big"></i>
+                    <p>Breakout Rooms</p>
+                </div>
+
+                <div class="flex-col menu-voice">
+                    <i class="fas fa-ellipsis-h icon-big"></i>
+                    <p>More</p>
+                </div>
+
+                
             </div>
         </div>
 
