Posizionato header in Fixed

--- a/index.html
+++ b/index.html
@@ -283,9 +283,152 @@
                 </div>
             </div>
             <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
+
+            <!--Inizio utente-->
+            <div class="person flex">
+                <div class="camera">
+                    <img src="https://picsum.photos/300/150"  alt="user">
+                    <div class="username flex">
+                        <i class="fas fa-microphone-slash"></i>
+                        <div>Pinco Pallo</div>
+                    </div>
+                </div>
+            </div>
+            <!--Fine utente-->
         </div>
 
-        
     </main>
     <!--Fine main-->
     
